--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "codeowners": [],
     "dependencies": [],
     "documentation": "https://www.example.com",
-    "integration_type": "hub",
-    "iot_class": "local_push",
+    "integration_type": "service",
+    "iot_class": "polling",
     "requirements": []
   }
